# PilotDeck

./: .gitattributes  .gitignore  CONTRIBUTING.md  DELIVERY-REPORT.md  Dockerfile  Dockerfile.sandbox  INTEGRATION.md  README.md  README.zh.md  SECURITY_REPORT.md  design-qa.md  docker-entrypoint.sh  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.js
og-memory-graph/: .gitignore  README.md  plugin.json  pyproject.toml  setup.py
og-memory-graph/frontend/: package.json
og-memory-graph/frontend/src/: App.tsx  index.css  types.ts
og-memory-graph/og/: __main__.py
og-memory-graph/og/agents/: build_agent.py  direction_agent.py  literature_analysis_agent.py  locate_agent.py  modify_agent.py  node_reparent_agent.py  paragraph_rewrite_agent.py  propagate_agent.py  refresh_agent.py  render_agent.py  rewrite_agent.py  section_merge_agent.py  section_renumber_agent.py  structure_agent.py  table_agent.py  table_curation_agent.py  table_naming_agent.py  validate_agent.py
og-memory-graph/og/cli/: __main__.py  _common.py  run.py
og-memory-graph/og/config/: constants.py  models.py  paths.py
og-memory-graph/og/core/: edge.py  graph.py  node.py
og-memory-graph/og/mcp_server/: __main__.py  locks.py  tools.py  watcher.py
og-memory-graph/og/pipeline/: balanced.py  curate.py  polish.py  run_cluster.py  simulation.py  update_pipeline.py
og-memory-graph/og/storage/: graph_store.py  vector_store.py  yaml_store.py
og-memory-graph/plugins/og-memory-graph/: config.json  index.js  manifest.json  (+1 more)
og-memory-graph/server/: filestore.py  main.py  schemas.py
(+626 files in other folders)
